--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,25 +3,46 @@
     .tashaci {
       padding: 15px;
     }
+    .normal {
+      width: 100px;
+      height: 100px;
+    }
+    .spacer {
+      width: 100%;
+      background-color: white;
+      height: 1px;
+    }
+    .date {
+      float: right;
+      font-size: 12px;
+    }
   </style>
 </head>
-<div class="lead well">
-  <div class="media">
-    <div class="media-left">
-      <a href="#">
-        <img class="media-object" src="http://i1.wp.com/www.techrepublic.com/bundles/techrepubliccore/images/icons/standard/icon-user-default.png"/>
-      </a>
-    </div>
-    <div class="media-body">
-      <h4 class="media-heading"> user@example.com</h4>
-      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-      <div class="tashaci">
-        <a href="question/12" class="btn btn-success">View Answers</a>
+<div class="container">
+
+    <% @questions.each do |q| %>
+    <div class="lead well">
+      <div class="media">
+        <div class="media-left">
+          <a href="#">
+            <img class="media-object" src="<%= q.gravatar %>"/>
+          </a>
+        </div>
+        <div class="media-body">
+          <h4 class="media-heading"> <%= q.email %> asked: </h4>
+          <%= q.body %>
+          <div class="tashaci">
+            <a href="<%= question_path(q) %>" class="btn btn-success">View Answers</a>
+          </div>
+          <p class="date"><%= time_ago_in_words q.created_at %> ago </p>
+        </div>
       </div>
     </div>
-  </div>
+
+    <% end %>
 </div>
-<div class="lead well">
+
+<!-- <div class="lead well">
   <div class="media">
     <div class="media-left">
       <a href="#">
@@ -52,4 +73,4 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
