Adding layout and sessions Dimitar Kostov

--- a/app/views/home/_navbar.html.erb
+++ b/app/views/home/_navbar.html.erb
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <a class="navbar-brand" href="home">History of Universe  </a>
+      <a class="navbar-brand" href="/home" style="color: white;">History of Universe  </a>
     </div>
     <div class="pull-right">
       <button type="submit" class="btn btn-success" data-toggle="modal" data-target="#myModal">Ask Question</button>
