--- a/app/views/home/_new_question_form.html.erb
+++ b/app/views/home/_new_question_form.html.erb
@@ -16,7 +16,7 @@
               </div>
             </div>
             <div class="form-group">
-              <label for="inputQuestion" class="col-sm-2" control-label>Question</label>
+              <label for="inputQuestion" class="col-sm-2 control-label">Question</label>
               <div class="col-sm-10">
                 <textarea class="form-control" name="question[body]" id="inputQuestion" placeholder="What would you like to know ?" required></textarea>
               </div>
