--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -38,8 +38,10 @@
         </div>
       </div>
     </div>
-
-    <% end %>
+  <% end %>
+  <% if @questions.empty? %>
+    <div class="alert alert-info"> Nothing here yet, be the first to ask </div>
+  <% end %>
 </div>
 
 <!-- <div class="lead well">
