--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,17 +9,43 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
   <style type="text/css">
+  .container {
+    min-height: 100vh;
+  }
+
   .container-fluid {
     background-color: black;
   }
   .pull-right {
     margin-top: 7.5px;
   }
+  .footer {
+    margin: 1px 0 0 0;
+    padding: 0;
+    width: 100%;
+    height: 54px;
+    background-color: black;
+  }
+  .footer-note {
+    text-align: center;
+    color: white;
+    width: 100%;
+    font-size: 20pt;
+    padding-top: 6px;
+  }
   </style>
 </head>
 <body>
   <%= render 'home/navbar' %>
+  <div class="well">
+    SESSION : <%= current_user_email %>
+  </div>
   <%= yield %>
   <%= render 'home/new_question_form' %>
+  <footer class="footer">
+    <p class="footer-note">
+      All rights reserverd ko100v software panda's are the best! ® ©
+    </p>
+  </footer>
 </body>
 </html>
